--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modal",
+  "name": "vmodal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "core-js": "^3.4.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-clickaway": "^2.2.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
