--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "vmodal",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vue-modally",
+  "version": "0.5.1",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
